force-app/main/default/objects/Loading_Ticket__c/Loading_Ticket__c.object-meta.xml
<CustomObject>
    <label>Loading Ticket</label>
    <nameField>
        <displayFormat>LT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loading Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>