force-app/main/default/objects/Loading_Ticket__c/fields/All_Loaded__c.field-meta.xml
<CustomField>
    <fullName>All_Loaded__c</fullName>
    <formula>AND(Total_Lines__c &gt; 0, Loaded_Lines__c = Total_Lines__c)</formula>
    <label>All Loaded</label>
    <type>Checkbox</type>
</CustomField>