force-app/main/default/objects/Loading_Ticket__c/fields/Aqua_Required__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqua Required</label>
    <type>Checkbox</type>
</CustomField>