force-app/main/default/objects/Loading_Ticket__c/fields/FM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FM_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Loading Tickets (FM Assignment)</relationshipLabel>
    <relationshipName>LT_FM_Assignment_Users</relationshipName>
    <type>Lookup</type>
</CustomField>