force-app/main/default/objects/Loading_Ticket__c/fields/Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Load_Date__c</fullName>
    <label>Load Date</label>
    <type>Date</type>
</CustomField>