force-app/main/default/objects/Loading_Ticket__c/fields/Loaded_Lines__c.field-meta.xml
<CustomField>
    <fullName>Loaded_Lines__c</fullName>
    <label>Loaded Lines</label>
    <summaryFilterItems>
        <field>Loading_Ticket_Line__c.Loaded__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Loading_Ticket_Line__c.Loading_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>