force-app/main/default/objects/Loading_Ticket__c/fields/Plants_Expected__c.field-meta.xml
<CustomField>
    <fullName>Plants_Expected__c</fullName>
    <label>Plants Expected</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>