force-app/main/default/objects/Loading_Ticket__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Loading Tickets</relationshipLabel>
    <relationshipName>Loading_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>