force-app/main/default/objects/Loading_Ticket__c/fields/Sod_Sqft_Expected__c.field-meta.xml
<CustomField>
    <fullName>Sod_Sqft_Expected__c</fullName>
    <label>Sod Sqft Expected</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>