force-app/main/default/objects/Loading_Ticket__c/fields/Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines__c</fullName>
    <label>Total Lines</label>
    <summaryForeignKey>Loading_Ticket_Line__c.Loading_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>