force-app/main/default/objects/Loading_Ticket__c/fields/Truck_Number__c.field-meta.xml
<CustomField>
    <fullName>Truck_Number__c</fullName>
    <label>Truck Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>